<resources>
    <string name="app_name">Moonraker-android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Views</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_temperatures">Temperatures</string>
    <string name="menu_motors">Motors</string>
    <string name="menu_print_status">Print status</string>
    <string name="menu_sd_card">SD card</string>

    <string name="settings_title">Settings</string>
    <string name="settings_port_summary">The port for Moonraker API</string>
    <string name="settings_port_title">Port</string>
    <string name="settings_host_summary">The host for Moonraker API</string>
    <string name="settings_host_title">Host</string>
    <string name="prefs_test_string">Current moonraker location is %1$s:%2$s</string>

    <string name="print_status_time_elapsed_label">Time since start:</string>
    <string name="print_status_print_time_elapsed_label">Time spent printing:</string>
    <string name="print_status_file_label">File:</string>
    <string name="print_status_state_label">State:</string>
    <string name="print_status_connected_to_message">Connected to %1$s</string>
    <string name="print_status_message_label">Message:</string>
    <string name="print_status_time_dash">-</string>
    <string name="print_status_printing_message_placeholder">Some message</string>
    <string name="print_status_long_file_name_placeholder">bigfile-with-some-very-long-filename-that-spans-multiple-rows.gcode</string>
    <string name="print_status_printer_state_placeholder">Printing</string>

    <string name="sd_card_file_modified_label">Modified:</string>
    <string name="sd_card_file_size_label">Size:</string>
    <string name="sd_card_estimated_time_label">Estimated time:</string>
    <string name="sd_card_slicer_label">Slicer:</string>
    <string name="sd_card_slicer_version_label">Slicer version:</string>
    <string name="sd_card_modified_time_placeholder"> </string>
    <string name="sd_card_file_size_placeholder"> </string>
    <string name="sd_card_estimated_time_placeholder"> </string>
    <string name="sd_card_slicer_name_placeholder"> </string>
    <string name="sd_card_slicer_version_placeholder"> </string>
    <string name="sd_card_print_button_label">PRINT</string>
    <string name="sd_card_clear_metadata_button_label">CLEAR METADATA</string>

    <string name="motors_negative_100">-100</string>
    <string name="motors_positive_100">+100</string>
    <string name="motors_negative_01">-0.1</string>
    <string name="motors_negative_1">-1</string>
    <string name="motors_negative_10">-10</string>
    <string name="motors_positive_10">+10</string>
    <string name="motors_positive_1">+1</string>
    <string name="motors_positive_01">+0.1</string>
    <string name="motors_default_zero_position_placeholder">0.00</string>
    <string name="motors_z_axis_label">Z:</string>
    <string name="motors_y_axis_label">Y:</string>
    <string name="motors_x_axis_label">X:</string>
    <string name="motors_e_label">E:</string>

    <string name="temperatures_default_temp_placeholder">0.0C</string>
    <string name="temperatures_target_temp_label">Target:</string>
    <string name="temperatures_heated_plate_label">Heated\nPlate:</string>
    <string name="temperatures_hotend_label">Hotend:</string>
    <string name="temperatures_set_hotend_temp_button_label">Set Hotend Temp</string>
    <string name="temperatures_set_plate_temp_button_label">Set Plate Temp</string>
    <string name="temperatures_zero_temp_placeholder">0</string>

    <string name="print_worker_channel_name">Print status</string>
    <string name="print_worker_channel_description">Notification about current active print job</string>
    <string name="print_worker_notification_title">3D printing in progress</string>
    <string name="print_worker_remove_notification">Close</string>
</resources>