<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_temperatures"
            android:icon="@drawable/ic_menu_temperatures"
            android:title="@string/menu_temperatures" />
        <item
            android:id="@+id/nav_motors"
            android:icon="@drawable/ic_menu_motors"
            android:title="@string/menu_motors" />
        <item
            android:id="@+id/nav_print_status"
            android:icon="@drawable/ic_menu_print_status"
            android:title="@string/menu_print_status" />
        <item
            android:id="@+id/nav_sd_card"
            android:icon="@drawable/ic_menu_sd_card"
            android:title="@string/menu_sd_card" />
    </group>
</menu>