<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_print_status">

    <fragment
        android:id="@+id/nav_print_status"
        android:name="com.example.moonraker_android.ui.print_status.PrintStatusFragment"
        android:label="@string/menu_print_status"
        tools:layout="@layout/fragment_print_status" />

    <fragment
        android:id="@+id/nav_temperatures"
        android:name="com.example.moonraker_android.ui.temperatures.TemperaturesFragment"
        android:label="@string/menu_temperatures"
        tools:layout="@layout/fragment_temperatures" />

    <fragment
        android:id="@+id/nav_motors"
        android:name="com.example.moonraker_android.ui.motors.MotorsFragment"
        android:label="@string/menu_motors"
        tools:layout="@layout/fragment_motors" />

    <fragment
        android:id="@+id/nav_sd_card"
        android:name="com.example.moonraker_android.ui.sd_card.SDCardFragment"
        android:label="@string/menu_sd_card"
        tools:layout="@layout/fragment_sd_card" />
</navigation>