<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/sd_card_default_margin"
    tools:context=".ui.sd_card.SDCardFragment">

    <TextView
        android:id="@+id/label_file"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/sd_card_default_margin"
        android:text="@string/print_status_file_label"
        android:textSize="@dimen/sd_card_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/spinner_files"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_files"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@id/label_file"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_modified"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_file_modified_label"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintEnd_toStartOf="@id/text_modified"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_file" />

    <TextView
        android:id="@+id/text_modified"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_modified_time_placeholder"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_modified"
        app:layout_constraintTop_toBottomOf="@id/label_file" />

    <TextView
        android:id="@+id/label_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_file_size_label"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintEnd_toStartOf="@id/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_modified" />

    <TextView
        android:id="@+id/text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_file_size_placeholder"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_size"
        app:layout_constraintTop_toBottomOf="@id/text_modified" />

    <TextView
        android:id="@+id/label_estimated_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_estimated_time_label"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintEnd_toStartOf="@id/text_estimated_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_size" />

    <TextView
        android:id="@+id/text_estimated_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_estimated_time_placeholder"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_estimated_time"
        app:layout_constraintTop_toBottomOf="@id/text_size" />

    <TextView
        android:id="@+id/label_slicer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_slicer_label"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintEnd_toStartOf="@id/text_slicer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_estimated_time" />

    <TextView
        android:id="@+id/text_slicer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_slicer_name_placeholder"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_slicer"
        app:layout_constraintTop_toBottomOf="@id/text_estimated_time" />

    <TextView
        android:id="@+id/label_slicer_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_slicer_version_label"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintEnd_toStartOf="@id/text_slicer_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_slicer" />

    <TextView
        android:id="@+id/text_slicer_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sd_card_text_size"
        android:layout_marginStart="@dimen/zero_margin"
        android:layout_marginTop="@dimen/zero_margin"
        android:text="@string/sd_card_slicer_version_placeholder"
        android:paddingBottom="@dimen/sd_card_default_margin"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_slicer_version"
        app:layout_constraintTop_toBottomOf="@id/text_slicer" />

    <Button
        android:id="@+id/printButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sd_card_button_start_margin"
        android:text="@string/sd_card_print_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_slicer_version"
        app:layout_constraintVertical_bias="0.119" />

</androidx.constraintlayout.widget.ConstraintLayout>